--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         LASER_WIDTH = 10  # Increased laser thickness
         LASER_DURATION = 800  # Reduced laser duration
         MAX_LEVELS = 3
-        BOSS_HITS_REQUIRED = 10
+        BOSS_HITS_REQUIRED = 20  # Increased hits required to defeat the boss
 
         score = 0
         level = MAX_LEVELS + 1  # Start directly at the boss fight
@@ -151,6 +151,7 @@
             # Adding a visual effect for the boss fight
             ctx.fillStyle = "rgba(0, 0, 255, 0.1)"
             ctx.fillRect(0, 0, WIDTH, HEIGHT)
+            # Add a pulsating effect
             if not game_started:
                 draw_start_screen()
             elif showing_level_title:
@@ -348,3 +349,4 @@
     </script>
 </body>
 </html>
+
