--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         BULLET_SPEED = 5
         ENEMY_BULLET_SPEED = 3
         LASER_WIDTH = 10  # Increased laser thickness
-        LASER_DURATION = 800  # Reduced laser duration
+        LASER_DURATION = 700  # Slightly reduced laser duration
         MAX_LEVELS = 3
         BOSS_HITS_REQUIRED = 20  # Increased hits required to defeat the boss
 
@@ -151,7 +151,6 @@
             # Adding a visual effect for the boss fight
             ctx.fillStyle = "rgba(0, 0, 255, 0.1)"
             ctx.fillRect(0, 0, WIDTH, HEIGHT)
-            # Add a pulsating effect
             if not game_started:
                 draw_start_screen()
             elif showing_level_title:
@@ -349,4 +348,3 @@
     </script>
 </body>
 </html>
-
